Updated copy / typeface

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <link rel="apple-touch-icon" sizes="72x72" href="http://dannychapman.com/images/design/icons/apple-icon-touch-72-precomposed.png">
 <link rel="apple-touch-icon" sizes="114x114" href="http://dannychapman.com/images/design/icons/apple-icon-touch-114-precomposed.png">
 
-
 <title>Danny Chapman</title>
 
 
@@ -60,7 +59,7 @@
 <div class="large-6 small-centered columns">
 <p>An ambitious <abbr>Chief Information Officer</abbr> who wanted a brand new direction. A smart development team looking for a new way forward. When I arrived on site to help the Hawaii.gov team, the pieces were in place for something dramatically new.</p> 
 
-<p>We sketched our way through a rapid prototype, design and build process. I led agency stakeholder meetings, content strategy reviews, design and front-end coding development. I couldn&rsquo;t be more proud of what we accomplished. The new Hawaii.gov went from style tiles to full launch in under ten weeks.</p>
+<p>We sketched our way through a rapid prototype, design and build process. I led agency stakeholder meetings, content strategy reviews, design and front-end coding development. I couldn&rsquo;t be more proud of what we accomplished. The new Hawaii.gov went from style tiles to full launch in under twelve weeks.</p>
 </div>
 
 </div><!--/small 12 -->
@@ -119,7 +118,7 @@
 
 </div><!--/large 7 -->
 
-<div class="large-9 large-centered columns">
+<div class="large-8 large-centered columns">
 <img class="feature" src="assets/images/style-tile.png" alt="My USA style tile" />
 </div>
 
@@ -153,7 +152,7 @@
 <dd>Foundation 4</dd>
 <dd>High resolution support</dd>
 <dd>Mobile first</dd>
-<dd>SASS</dd>
+<dd>Sass</dd>
 </dl>
 </div>
 
@@ -207,14 +206,7 @@
 </div><!--/slide -->
 
 <div class="footer">
-<div class="row">
-<div class="small-6 small-centered columns">
 
-<p><a href="http://dribbble.com/dannychapman/">Follow me on Dribbble</a> | <a href="mailto:danny@ducstudio.com">Email me</a></p>
-
-</div> 
-
-</div>
 
 
 </div>
