Compressed, final copy, CSS edits

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 
 
-<link rel='stylesheet' href='assets/scss/foundation.css'>
-<script src='assets/js/vendor/custom.modernizr.js'></script>
+<link rel='stylesheet' href='27e98aa8e141fbe2dac84bc6cb8a478d.css'>
+<script src='6b0668d4ccb5936a874e9612b79ccd6b.js'></script>
 
 </head>
 <body>
@@ -56,10 +56,10 @@
 <div class="large-12 columns">
 <h2>A new way of thinking for Hawaii.gov</h2>
 
-<div class="large-6 small-centered columns">
-<p>An ambitious <abbr>Chief Information Officer</abbr> who wanted a brand new direction. A smart development team looking for a new way forward. When I arrived on site to help the Hawaii.gov team, the pieces were in place for something dramatically new.</p> 
+<div class="large-7 small-centered columns">
+<p>When I arrived on site to help the Hawaii.gov team, the pieces were in place for something dramatically new: an ambitious <abbr>Chief Information Officer</abbr> who wanted a brand new direction, combined with a smart development team looking for a new approach to building a large scale government website.</p> 
 
-<p>We sketched our way through a rapid prototype, design and build process. I led agency stakeholder meetings, content strategy reviews, design and front-end coding development. I couldn&rsquo;t be more proud of what we accomplished. The new Hawaii.gov went from style tiles to full launch in under twelve weeks.</p>
+<p>We quickly worked through an agile prototype, design and build process. I led agency stakeholder meetings, content strategy reviews, design and front-end coding development. I couldn&rsquo;t be more proud of what we accomplished. The new Hawaii.gov went from style tiles to full launch in under twelve weeks.</p>
 </div>
 
 </div><!--/small 12 -->
@@ -92,7 +92,7 @@
 <div id="slide" class="three">
 
 <div class="row">
-<div class="large-11 small-centered columns">
+<div class="large-10 small-centered columns">
 <img src="assets/images/myusa-logo.png" alt="my usa logo" />
 </div><!--/large 11 -->
 </div><!--/row -->
@@ -109,9 +109,9 @@
 <div class="row">
 <div class="large-7 large-centered columns">
 <h3>No big deal right?</h3>
-<p>Reinvention. That&rsquo;s the mission of MyUSA, one of five new &lsquo;game changing&rsquo; projects part of the Presidential Innovation Fellows program.</p> 
+<p>Reinvention. That&rsquo;s the mission of MyUSA, one of five &lsquo;game changing&rsquo; projects part of the Presidential Innovation Fellows program.</p> 
 
-<p>I served as a member of the inaugural class of fellows, working on the visual development, <abbr>UX</abbr> and product design for all things My<abbr>USA</abbr>. A central challenge: Develop a brand that defies the typical associations we have with Government.</p> 
+<p>I served as a member of the inaugural class of fellows, working on the visual development, <abbr>UX</abbr> and product design for all things My<abbr>USA</abbr>. We were tasked with a central challenge: develop a brand that defies the typical associations we have with government.</p> 
 
 <p class="no-padding">My<abbr>USA</abbr> went from whiteboard sketch to private beta during our six month fellowship, and is slated to launch in 2014.</p>
 
@@ -140,7 +140,7 @@
 <div class="row">
 <div class="large-5 large-offset-2 columns">
 <p><strong>The task:</strong> A creative direction for Pennsylvania government online. I led the Pennsylvania Interactive team through information architecture planning, content strategy sessions, <abbr>UX</abbr>, <abbr>UI</abbr> and front end development.</p> 
-<p>Rapid prototypes ensued, with great stakeholder meetings every step of the way. Sporting a new tile interface, the new <abbr title="pennsylvania">PA</abbr>.gov launched this fall.</p> 
+<p>Rapid prototypes ensued, with productive stakeholder meetings every step of the way. Sporting a new tile interface, the new <abbr title="pennsylvania">PA</abbr>.gov launched this fall.</p> 
 </div>
 
 <div class="large-4 large-offset-1 columns">
@@ -179,7 +179,7 @@
 
 <div class="row">
 <div class="large-6 small-centered columns">
-<p class="no-padding">Directly inspired from the presidential Seal, the Presidential Innovation Fellows logo draws on classic American iconography and typography. It can now be seen on lapel pins and laptop stickers all around <abbr title="the district of columbia">DC</abbr>.</p>
+<p class="no-padding">Directly inspired from the presidential seal, the Presidential Innovation Fellows logo draws on classic American iconography and typography. It can now be seen on lapel pins and laptop stickers all around <abbr title="the district of columbia">DC</abbr>.</p>
 </div>
 </div>
 
@@ -211,8 +211,8 @@
 
 </div>
 
-<script src='assets/js/vendor/jquery.js'></script>
-<script src='assets/js/foundation/foundation.js'></script>
+<script src='63be44c1c937407d1e9746c0dfee6c73.js'></script>
+<script src='ca3495728354a77ee1be3406ba97219f.js'></script>
 
 
 
