--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <div class="row">
 <div class="large-7 large-centered columns">
-<h3>No big deal right?</h3>
+<h3>A brand for government to citizen interaction</h3>
 <p>Reinvention. That&rsquo;s the mission of MyUSA, one of five new &lsquo;game changing&rsquo; projects part of the Presidential Innovation Fellows program.</p> 
 
 <p>I served as a member of the inaugural class of fellows, working on the visual development, <abbr>UX</abbr> and product design for all things My<abbr>USA</abbr>. A central challenge: Develop a brand that defies the typical associations we have with Government.</p> 
