--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width">
 <meta content='website' property='og:type'>
-<meta content='http://www.dannychapman.com/' property='og:url'>
-<meta content='http://www.dannychapman.com/images/design/icons/apple-icon-touch-72-precomposed.png' property='og:image'>
+<meta content='https://www.dannychapman.com/' property='og:url'>
+<meta content='https://www.dannychapman.com/images/design/icons/apple-icon-touch-72-precomposed.png' property='og:image'>
 <meta content='Danny Chapman' property='og:title'>
 <meta content='Government design and usability' property='og:description'>
 <meta name="apple-mobile-web-app-title" content="Danny">
 <meta name="application-name" content="Danny">
 
-<link type="text/plain" rel="author" href="http://dannychapman.com/humans.txt" />
+<link type="text/plain" rel="author" href="https://dannychapman.com/humans.txt" />
 
 <!-- Icons -->
-<link rel="shortcut icon" href="http://dannychapman.com/images/design/icons/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="http://dannychapman.com/images/design/icons/apple-icon-touch-57-precomposed.png">
-<link rel="apple-touch-icon" sizes="72x72" href="http://dannychapman.com/images/design/icons/apple-icon-touch-72-precomposed.png">
-<link rel="apple-touch-icon" sizes="114x114" href="http://dannychapman.com/images/design/icons/apple-icon-touch-114-precomposed.png">
+<link rel="shortcut icon" href="https://dannychapman.com/images/design/icons/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="https://dannychapman.com/images/design/icons/apple-icon-touch-57-precomposed.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://dannychapman.com/images/design/icons/apple-icon-touch-72-precomposed.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://dannychapman.com/images/design/icons/apple-icon-touch-114-precomposed.png">
 
 
 <title>Danny Chapman</title>
